# Job_search

./: .env.example  .env.gemini.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  requirements.txt
config/: __init__.py  sector_loader.py  settings.py
config/profiles/: default.json  example_backend.json  profile.template.json
config/sectors/: automation.json  data.json  example.json
docs/: architecture.md
docs/agents/: aws-deployment-agent.md  linkedin-agent.md  matching-agent.md  notifier-agent.md  pipeline-agent.md  profile-agent.md  repo-data-agent.md  scheduler-agent.md  scraper-agent.md  ui-agent.md
infra/aws/: crontab.example  env.ec2.example  install_ec2.sh  run_daily_pipeline.sh  setup_eventbridge.sh
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial_schema.py  002_sector_string.py  003_hidden_offers.py  004_notification_log.py
scripts/: docker-compose.postgres.yml  init_db.py  run_ui.ps1  run_ui.sh  test_postgres_connection.py
scripts/windows/: register_scheduled_task.ps1  run_job_search.ps1
src/job_search/: __init__.py  cli.py
tests/: conftest.py  test_api_usage.py  test_false_positive_filter.py  test_justjoin_skills.py  test_linkedin_scraper.py  test_llm_evaluator.py  test_memory_integration.py  test_model_fallback.py  test_notifications.py  test_pipeline.py  test_profile_service.py  test_repositories.py  test_scrapers.py  test_sector_config.py  test_semantic_matcher.py  test_ui_data_access.py
tests/fixtures/: justjoin_detail.json  justjoin_list.json  (+5 more)
ui/: app.py  components.py  data_access.py
(+44 files in other folders)
