[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-search"
version = "0.1.0"
description = "Autonomous job search and intelligent matching system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
job-search = "job_search.cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["config*", "job_search*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
